--- a/package.json
+++ b/package.json
@@ -4,29 +4,28 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
-    
   },
   "dependencies": {
+    "bcryptjs": " *",
+    "body-parser": "*",
+    "connect-flash": " *",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "express": "~4.16.0",
-    "http-errors": "~1.6.2",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.0",
-    "pug": "^2.0.3",
-    "bcryptjs": " *",
-    "connect-flash": " *",
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "*",
+    "hbs": "*",
+    "http-errors": "~1.6.2",
+    "jade": "~1.11.0",
     "mongodb": "*",
     "mongoose": "*",
+    "morgan": "~1.9.0",
     "multer": "*",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
-    "body-parser": "*",
-    "serve-favicon": "*",
-    "hbs": "*"
+    "pug": "^2.0.3",
+    "serve-favicon": "^2.5.0"
   }
 }
